--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
     box-sizing: border-box;
 }
 
+.alert { background-color: #f8d7da; color: #721c24; padding: 10px; margin-top: 10px; border: 1px solid #f5c6cb; border-radius: 5px; }
 
 body {
     background-color: var(--BG_principal) !important;
@@ -374,12 +375,16 @@ header {
                                     color: white;
                                     font-size: 20px;
                                     font-weight: bold;
-                                    transition: 200ms;
+                                    transition: 250ms ease-in-out all;
 
                                     &:hover {
                                         background-color: transparent !important;
-                                        transform: scale(1.03, 1.03) !important;
-                                        text-shadow: 0 0 6  px white !important;
+                                        transform: scale(1.05,1.05) !important;
+                                        text-shadow: 0 0 6px white !important;
+                                    }
+
+                                    &::after {
+                                        background-color: transparent !important;
                                     }
 
                                     i {
@@ -410,7 +415,7 @@ header {
 
             }
 
-            .navbar_baixo {
+            .navbar_baixo { 
                 display: flex;
                 gap: 20px;
                 align-items: center;
@@ -420,11 +425,11 @@ header {
                     font-size: 16px;
                     font-weight: bold;
                     text-decoration: none;
-                    transition: 200ms;
+                    transition: 250ms ease-in-out all !important;
 
                     &:hover {
                         text-shadow: 0 0 10px white !important;
-                        transform: scale(1.03, 1.03) !important;
+                        transform: scale(1.05, 1.05) !important;
                     }
                 }
 
@@ -1454,7 +1459,7 @@ footer {
             font-size: 30px;
             font-weight: bold;
 
-            margin-bottom: 0;
+            margin-bottom: 30px;
         }
 
         hr {
