--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@
     box-sizing: border-box;
 }
 
-.alert { background-color: #f8d7da; color: #721c24; padding: 10px; margin-top: 10px; border: 1px solid #f5c6cb; border-radius: 5px; }
 
 body {
     background-color: var(--BG_principal) !important;
@@ -379,7 +378,7 @@ header {
 
                                     &:hover {
                                         background-color: transparent !important;
-                                        transform: scale(1.05,1.05) !important;
+                                        transform: scale(1.05, 1.05) !important;
                                         text-shadow: 0 0 6px white !important;
                                     }
 
@@ -415,7 +414,7 @@ header {
 
             }
 
-            .navbar_baixo { 
+            .navbar_baixo {
                 display: flex;
                 gap: 20px;
                 align-items: center;
@@ -1605,6 +1604,7 @@ footer {
                     .dropdown {
                         margin: 0 !important;
                         padding: 0 !important;
+
                         a {
                             text-decoration: none;
                             color: white;
@@ -1621,7 +1621,7 @@ footer {
                             border-radius: 20px;
                             backdrop-filter: blur(8px);
                             padding: 10px;
-                            
+
                             li {
                                 display: flex;
                                 justify-content: space-between;
