--- a/paginas/login.phtml
+++ b/paginas/login.phtml
@@ -1,4 +1,4 @@
-<section id="area_login">
+<!-- <section id="area_login">
     <div class="conteiner_login" style="overflow: hidden !important;">
 
         <h2>ENTRAR COM UMA CONTAR TECNOLO</h2>
@@ -23,4 +23,35 @@
         <a href="login"><i class="bi bi-google"></i>Google</a>
         <a href="login"><i class="bi bi-facebook"></i>Facebook</a>
     </div>
+</section> -->
+
+<section id="area_login">
+    <div class="conteiner_login" style="overflow: hidden !important;">
+
+        <h2>ENTRAR COM UMA CONTAR TECNOLO</h2>
+
+        <form id="form" action="home" method="post" class="form">
+
+            <input type="email" class="required"  oninput="emailValidate()" placeholder="E-mail" required>
+            <span class="span-required" style="margin: 10px 0 0 10px; color:red; display: none;">E-mail inválido</span>
+
+            <input type="password" class="required" oninput="mainPasswordValidate()" placeholder="Senha" style="margin: 20px 0 10px 0;" required>
+            <span class="span-required" style="margin: 0 0 10px 10px; color:red; display: none;">Senha deve ter no mínimo 8 caracteres</span>
+
+            <a href="esqueciMinhaSenha" class="senha">Esqueceu minha senha</a>
+
+            <div class="btn_login">
+                <a id="link" href="index.php">Voltar</a>
+                <button id="link" type="submit">Confirmar</button>
+            </div>
+        </form>
+
+        <a href="cadastro">Cadastrar-se</a>
+    </div>
+
+    <div class="login_2">
+        <a href="login"><i class="bi bi-google"></i>Google</a>
+        <a href="login"><i class="bi bi-facebook"></i>Facebook</a>
+    </div>
 </section>
+
