--- a/paginas/cadastro.phtml
+++ b/paginas/cadastro.phtml
@@ -3,9 +3,10 @@
 
         <h2>CRIE SUA CONTAR TECNOLO</h2>
 
-        <form action="login" method="post" class="form">
+        <form id="form" action="login" method="post" class="form">
 
-            <input type="email" placeholder="E-mail" style="margin-bottom: 20px;" required>
+            <input type="email" class="required" id="email" oninput="emailValidate()" placeholder="E-mail" style="margin-bottom: 20px;" required>
+
             <input type="password" placeholder="Senha" style="margin-bottom: 20px;" required>
             <input type="password" placeholder="Confirmar Senha" style="margin-bottom: 20px;" required>
             <input type="nome" placeholder="Nome Completo" style="margin-bottom: 20px;" required>
@@ -41,3 +42,30 @@
     </div>
 
 </section>
+
+<div class="card">
+    <img src="..." class="card-img-top" alt="...">
+
+    <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+</div>
+
+<div class="card" aria-hidden="true">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+        <h5 class="card-title placeholder-glow">
+            <span class="placeholder col-6"></span>
+        </h5>
+        <p class="card-text placeholder-glow">
+            <span class="placeholder col-7"></span>
+            <span class="placeholder col-4"></span>
+            <span class="placeholder col-4"></span>
+            <span class="placeholder col-6"></span>
+            <span class="placeholder col-8"></span>
+        </p>
+        <a class="btn btn-primary disabled placeholder col-6" aria-disabled="true"></a>
+    </div>
+</div>
