--- a/paginas/cadastro.phtml
+++ b/paginas/cadastro.phtml
@@ -3,16 +3,22 @@
 
         <h2>CRIE SUA CONTAR TECNOLO</h2>
 
-        <form id="form" action="login" method="post" class="form">
 
-            <input type="email" class="required" id="email" oninput="emailValidate()" placeholder="E-mail" style="margin-bottom: 20px;" required>
+        <form id="form" action="home" method="post" class="form">
 
-            <input type="password" placeholder="Senha" style="margin-bottom: 20px;" required>
-            <input type="password" placeholder="Confirmar Senha" style="margin-bottom: 20px;" required>
-            <input type="nome" placeholder="Nome Completo" style="margin-bottom: 20px;" required>
+                <input type="email" class="required" name="email" id="email" oninput="emailValidate()" placeholder="E-mail" required>
+                <span class="span-required" style="margin:5px 0 0 10px; color:red; display: none;">E-mail inválido</span>
 
-            <p>Data de Nascimento</p>
+                <input type="password" name="Number" class="required" oninput="mainPasswordValidate()" required id="senha" placeholder="Senha" style="margin-top:20px;">
+                <span class="span-required" style="display: none; color: red;">Deve ter pelo menos 8 digetos </span>
 
+                <input type="password" placeholder="Confirmar Senha" name="Number" class="required" oninput="mainPasswordValidate2()" required id="senha" style="margin-top:20px;">
+                <span class="span-required" style="display: none; color: red;">Senha senha incorreta</span>
+
+                <input type="nome" name="nome" id="nome" class="required" oninput="nomeValidate()" placeholder="Nome Completo" style="margin-top:20px;" required>
+                <span class="span-required" style="margin:5px 0 0 10px; color:red; display: none;">O nome deve ter pelo menos 3 digitos</span>
+
+            <p style="margin-top:20px;">Data de Nascimento</p>
 
             <div class="conteiner_data">
 
