ajuste tela de masis vendidos

--- a/paginas/maisvendidos.phtml
+++ b/paginas/maisvendidos.phtml
@@ -1,17 +1,96 @@
-<nav aria-label="Page navigation example">
-        <ul class="pagination">
-            <li class="page-item">
-                <a class="page-link" href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                </a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
-                <a class="page-link" href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
+<section id="main_produtos">
+    <h2>Mais Vendidos</h2>
+    <hr>
+    <div class="produto_flex">
+        <a href="detalheProduto" class="conteiner_produto">
+
+            <div class="imagem">
+                <img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt="" width="100%">
+            </div>
+            <div class="descricao">
+                <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera
+                    Tripla de 48MP, Tela 6,9 , Titânio Natural
+                </p>
+
+                <p class="preco">R$ 78.000,00</p>
+                <p class="sub_preco">Aviste no Pix ou até <span>10x de
+                        R$7.800,00</span></p>
+
+            </div>
+
+        </a>
+
+        <a href="" class="conteiner_produto">
+
+            <div class="imagem">
+                <img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt="" width="100%">
+            </div>
+            <div class="descricao">
+                <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera
+                    Tripla de 48MP, Tela 6,9 , Titânio Natural
+                </p>
+
+                <p class="preco">R$ 78.000,00</p>
+                <p class="sub_preco">Aviste no Pix ou até <span>10x de
+                        R$7.800,00</span></p>
+
+            </div>
+
+        </a>
+
+        <a href="" class="conteiner_produto">
+
+            <div class="imagem">
+                <img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt="" width="100%">
+            </div>
+            <div class="descricao">
+                <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera
+                    Tripla de 48MP, Tela 6,9 , Titânio Natural
+                </p>
+
+                <p class="preco">R$ 78.000,00</p>
+                <p class="sub_preco">Aviste no Pix ou até <span>10x de
+                        R$7.800,00</span></p>
+
+            </div>
+
+        </a>
+
+        <a href="" class="conteiner_produto">
+
+            <div class="imagem">
+                <img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt="" width="100%">
+            </div>
+            <div class="descricao">
+                <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera
+                    Tripla de 48MP, Tela 6,9 , Titânio Natural
+                </p>
+
+                <p class="preco">R$ 78.000,00</p>
+                <p class="sub_preco">Aviste no Pix ou até <span>10x de
+                        R$7.800,00</span></p>
+
+            </div>
+
+        </a>
+
+        <a href="" class="conteiner_produto">
+
+            <div class="imagem">
+                <img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt="" width="100%">
+            </div>
+            <div class="descricao">
+                <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera
+                    Tripla de 48MP, Tela 6,9 , Titânio Natural
+                </p>
+
+                <p class="preco">R$ 78.000,00</p>
+                <p class="sub_preco">Aviste no Pix ou até <span>10x de
+                        R$7.800,00</span></p>
+
+            </div>
+
+        </a>
+
+    </div>
+</section
