--- a/css/style.css
+++ b/css/style.css
@@ -536,11 +536,12 @@ footer {
             ul {
                 padding: 0 !important;
                 margin: 0 !important;
-            
+
                 li {
                     list-style: none;
                     padding: 0 !important;
                     margin: 0 !important;
+
                     a {
                         display: flex;
                         align-items: center;
@@ -871,7 +872,6 @@ footer {
 
             text-align: center;
             margin-bottom: 26px;
-
         }
 
         .form {
@@ -1791,6 +1791,101 @@ footer {
     }
 }
 
+#main_produtos {
+    width: 100%;
+
+    padding: 5px;
+    margin: 30px auto;
+
+    h2 {
+        font-size: 32px;
+        font-weight: bold;
+        text-align: start;
+        margin-bottom: 5px;
+    }
+
+    hr {
+        width: 98%;
+        height: 3px;
+        opacity: 100%;
+        background-color: white;
+        border-radius: 50%;
+        margin-top: 0;
+        margin-bottom: 20px;
+
+    }
+
+    .produto_flex {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+
+        .conteiner_produto {
+            text-decoration: none !important;
+            color: white !important;
+
+
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
+
+            display: flex;
+
+            justify-content: space-between;
+
+            background-color: rgba(255, 255, 255, 0.205) !important;
+            border: solid 1px white;
+            border-radius: 20px;
+
+            .imagem {
+                width: 30%;
+            }
+
+            .descricao {
+                width: 67%;
+
+                .desc {
+                    width: 100%;
+                    display: -webkit-box;
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    -webkit-line-clamp: 2;
+                    margin-bottom: 5px;
+                    font-size: 13px;
+                    font-family: montserrat !important;
+                    font-weight: bold;
+                    color: white;
+                }
+
+                .preco {
+                    color: rgb(255, 208, 0);
+
+                    font-size: 24px;
+                    font-weight: bold;
+                    font-family: "montserrat";
+
+                    margin: 0;
+                }
+
+                .sub_preco {
+                    font-family: Arial, Helvetica, sans-serif;
+                    color: white;
+                    width: 170px;
+                    font-size: 12px;
+                    margin: 0;
+
+                    span {
+                        font-weight: bold;
+                    }
+                }
+
+
+
+            }
+        }
+    }
+}
 
 @media (min-width: 600px) {
     #conteiner_carrosel {
