--- a/paginas/maisvendidos.phtml
+++ b/paginas/maisvendidos.phtml
@@ -5,7 +5,7 @@
         <a href="detalheProduto" class="conteiner_produto">
 
             <div class="imagem">
-                <img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt="" width="100%">
+                <img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt="" >
             </div>
             <div class="descricao">
                 <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera
@@ -19,11 +19,10 @@
             </div>
 
         </a>
-
-        <a href="" class="conteiner_produto">
+        <a href="detalheProduto" class="conteiner_produto">
 
             <div class="imagem">
-                <img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt="" width="100%">
+                <img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt="" >
             </div>
             <div class="descricao">
                 <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera
@@ -37,11 +36,10 @@
             </div>
 
         </a>
-
-        <a href="" class="conteiner_produto">
+        <a href="detalheProduto" class="conteiner_produto">
 
             <div class="imagem">
-                <img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt="" width="100%">
+                <img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt="" >
             </div>
             <div class="descricao">
                 <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera
@@ -55,11 +53,10 @@
             </div>
 
         </a>
-
-        <a href="" class="conteiner_produto">
+        <a href="detalheProduto" class="conteiner_produto">
 
             <div class="imagem">
-                <img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt="" width="100%">
+                <img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt="" >
             </div>
             <div class="descricao">
                 <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera
@@ -73,11 +70,10 @@
             </div>
 
         </a>
-
-        <a href="" class="conteiner_produto">
+        <a href="detalheProduto" class="conteiner_produto">
 
             <div class="imagem">
-                <img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt="" width="100%">
+                <img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt="" >
             </div>
             <div class="descricao">
                 <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera
@@ -91,6 +87,25 @@
             </div>
 
         </a>
+        <a href="detalheProduto" class="conteiner_produto">
+
+            <div class="imagem">
+                <img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt="" >
+            </div>
+            <div class="descricao">
+                <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera
+                    Tripla de 48MP, Tela 6,9 , Titânio Natural
+                </p>
+
+                <p class="preco">R$ 78.000,00</p>
+                <p class="sub_preco">Aviste no Pix ou até <span>10x de
+                        R$7.800,00</span></p>
+
+            </div>
+
+        </a>
+
+
 
     </div>
 </section
