--- a/paginas/home.phtml
+++ b/paginas/home.phtml
@@ -9,13 +9,13 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="4000">
-            <img src="imagens/bannerBuds.jpg" class="d-block w-100" alt="...">
+            <img src="imagens/banner/bannerBuds.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="4000">
-            <img src="imagens/banners24.jpg" class="d-block w-100" alt="...">
+            <img src="imagens/banner/banners24.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="4000">
-            <img src="imagens/banner3.png" class="d-block w-100" alt="...">
+            <img src="imagens/banner/banner3.png" class="d-block w-100" alt="...">
         </div>
     </div>
     <button id="botao_carrosel" class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -48,7 +48,7 @@
             <div class="carousel-cell">
 
                 <a href="detalheProduto">
-                    <div class="img"><img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt></div>
+                    <div class="img"><img src="imagens/produtos/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt></div>
 
                     <div class="descricao">
                         <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera
@@ -67,7 +67,7 @@
             <div class="carousel-cell">
 
                 <a href="">
-                    <div class="img"><img src="imagens/s24ultra.png" alt></div>
+                    <div class="img"><img src="imagens/produtos/s24ultra.png" alt></div>
 
                     <div class="descricao">
                         <p class="desc">Smartphone Samsung Galaxy S24 Ultra, Galaxy AI, Selfie de 12MP, Tela de 6.8" 1-120Hz, 256GB, 12GB RAM - Titânio Cinza
@@ -85,7 +85,7 @@
             <div class="carousel-cell">
 
                 <a href>
-                    <div class="img"><img src="imagens/galaxyBuds.png" alt></div>
+                    <div class="img"><img src="imagens/produtos/galaxyBuds.png" alt></div>
 
                     <div class="descricao">
                         <p class="desc">Samsung Galaxy Buds3, Fone de Ouvido sem fio, som mais imersivo, Cancelamento Ativo de Ruído, Áudio Hi-Fi, Áudio 360, Tradução Simultanêa com Galaxy AI
@@ -103,7 +103,7 @@
             <div class="carousel-cell">
 
                 <a href="">
-                    <div class="img"><img src="imagens/s24ultra.png" alt></div>
+                    <div class="img"><img src="imagens/produtosv/s24ultra.png" alt></div>
 
                     <div class="descricao">
                         <p class="desc">Smartphone Samsung Galaxy S24 Ultra, Galaxy AI, Selfie de 12MP, Tela de 6.8" 1-120Hz, 256GB, 12GB RAM - Titânio Cinza
@@ -121,7 +121,7 @@
             <div class="carousel-cell">
 
                 <a href>
-                    <div class="img"><img src="imagens/galaxyBuds.png" alt></div>
+                    <div class="img"><img src="imagens/produtos/galaxyBuds.png" alt></div>
 
                     <div class="descricao">
                         <p class="desc">Samsung Galaxy Buds3, Fone de Ouvido sem fio, som mais imersivo, Cancelamento Ativo de Ruído, Áudio Hi-Fi, Áudio 360, Tradução Simultanêa com Galaxy AI
@@ -139,7 +139,7 @@
             <div class="carousel-cell">
 
                 <a href="">
-                    <div class="img"><img src="imagens/s24ultra.png" alt></div>
+                    <div class="img"><img src="imagens/produtos/s24ultra.png" alt></div>
 
                     <div class="descricao">
                         <p class="desc">Smartphone Samsung Galaxy S24 Ultra, Galaxy AI, Selfie de 12MP, Tela de 6.8" 1-120Hz, 256GB, 12GB RAM - Titânio Cinza
@@ -287,8 +287,8 @@
 
     </div>
 
-    <div class="banner">
-        <img src="imagens/banner6.jpg" alt="" width="100%" style="margin: 30px 0;">
+    <div class="banner" data-aos="fade" data-aos-duration="400">
+        <img src="imagens/banner/banner6.jpg" alt="" width="100%" style="margin: 30px 0;">
     </div>
 
     <div class="conteiner_carrosel">
