--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,6 @@ header {
                     form {
                         display: none;
 
-
                     }
                 }
 
@@ -203,11 +202,19 @@ header {
                     padding: 0 15px !important;
                 }
 
-                a {
-                    color: #d9d9d9 !important;
+                button {
+
+                    width: 40px;
+                    height: 40px;
+
+                    background-color: #d9d9d9 !important;
+                    border-radius: 10px;
+                    border: none !important;
 
                     svg {
                         width: 40px;
+                        height: 40px;
+                        color: rgba(0, 0, 0, 0.800);
                     }
                 }
             }
@@ -279,13 +286,14 @@ header {
                             font-weight: 500;
                         }
 
-                        a {
+                        button {
 
                             width: 40px;
                             height: 40px;
 
                             background-color: #d9d9d9 !important;
                             border-radius: 10px;
+                            border: none !important;
 
                             svg {
                                 width: 40px;
