--- a/paginas/maisvendidos.phtml
+++ b/paginas/maisvendidos.phtml
@@ -22,7 +22,7 @@
         <a href="detalheProduto" class="conteiner_produto">
 
             <div class="imagem">
-                <img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt="" >
+                <img src="imagens/produtos/s24ultra.png" alt="" >
             </div>
             <div class="descricao">
                 <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera
@@ -39,7 +39,7 @@
         <a href="detalheProduto" class="conteiner_produto">
 
             <div class="imagem">
-                <img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt="" >
+                <img src="imagens/produtos/galaxym55.png" alt="" >
             </div>
             <div class="descricao">
                 <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera
@@ -56,7 +56,7 @@
         <a href="detalheProduto" class="conteiner_produto">
 
             <div class="imagem">
-                <img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt="" >
+                <img src="imagens/produtos/galaxyzfold6.png" alt="" >
             </div>
             <div class="descricao">
                 <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera
@@ -73,7 +73,7 @@
         <a href="detalheProduto" class="conteiner_produto">
 
             <div class="imagem">
-                <img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt="" >
+                <img src="imagens/produtos/galaxyBuds.png" alt="" >
             </div>
             <div class="descricao">
                 <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera
